deployment-ssl.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  namespace: default
  labels:
    app: foo
spec:
  containers:
  - command:
    - /agnhost
    - netexec
    - --http-port
    - "8080"
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: foo-app
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: default
spec:
  selector:
    app: foo
  ports:
  # Porta usada internamente na imagem
  - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  namespace: default
  labels:
    app: bar
spec:
  containers:
  - command:
    - /agnhost
    - netexec
    - --http-port
    - "8080"
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    name: bar-app
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
  namespace: default
spec:
  selector:
    app: bar
  ports:
  # Porta usada internamente na imagem
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - adrianocarvalho.dev  # Domínio para o qual o certificado foi emitido
    secretName: tls-secret  # Nome do segredo que contém o certificado TLS
  rules:
  - host: adrianocarvalho.dev  # Domínio para o qual o ingress será aplicado
    http:
      paths:
      - pathType: Prefix
        path: /foo(/|$)(.*)
        backend:
          service:
            name: foo-service
            port:
              number: 8080
      - pathType: Prefix
        path: /bar(/|$)(.*)
        backend:
          service:
            name: bar-service
            port:
              number: 8080
---
